force-app/main/default/objects/Cotacao__c/Cotacao__c.object-meta.xml
<CustomObject>
    <label>Cotação</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Nome de Cotação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>