force-app/main/default/objects/Cotacao__c/fields/Cotacao_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cotacao_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotação Principal</label>
    <type>Checkbox</type>
</CustomField>