force-app/main/default/objects/Cotacao__c/fields/Data_de_Validade__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Validade__c</fullName>
    <label>Data de Validade</label>
    <type>Date</type>
</CustomField>