force-app/main/default/objects/Cotacao__c/fields/ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>ID_Externo__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>