force-app/main/default/objects/Cotacao__c/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano selecionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plano__c.Cotacao__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plano__c</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cotacoes</relationshipName>
    <type>Lookup</type>
</CustomField>